# schroot Makefile template
#
#
# Copyright © 2004-2005  Roger Leigh <rleigh@debian.org>
#
# schroot is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# schroot is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston,
# MA  02111-1307  USA
#
#####################################################################

# The name of the module.
#DOC_MODULE=schroot

# The top-level SGML file.
#DOC_MAIN_SGML_FILE=schroot-docs.sgml

# Extra options to supply to gtkdoc-scan
#SCAN_OPTIONS=

# The directory containing the source code. Relative to $(srcdir)
#DOC_SOURCE_DIR=../../schroot

#HFILE_GLOB=$(top_srcdir)/schroot/*.h
#CFILE_GLOB=$(top_srcdir)/schroot/*.c

# CFLAGS and LDFLAGS for compiling scan program. Only needed
# if $(DOC_MODULE).types is non-empty.
#INCLUDES = \
#	-std=c99			\
#	-I$(srcdir) 			\
#	-I$(top_srcdir) 		\
#	-I$(top_srcdir)/schroot		\
#	-I$(top_builddir) 		\
#	-I$(top_builddir)/schroot 	\
#	$(SCHROOT_CFLAGS)

#GTKDOC_LIBS = \
#	$(top_builddir)/schroot/libschroot.la

# Extra options to supply to gtkdoc-mkdb
#MKDB_OPTIONS=

# Images to copy into HTML directory
#HTML_IMAGES =

# Extra SGML files that are included by $(DOC_MAIN_SGML_FILE)
#content_files =

# Extra options to supply to gtkdoc-fixref
#FIXXREF_OPTIONS=--extra-dir=$(srcdir)/../schroot/html

#include $(top_srcdir)/scripts/gtk-doc.make


# Other files to distribute
#EXTRA_DIST +=

########################################################################
